2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	Add a test for changing of a field name. 

	* tests/Makefile.am:
	* tests/test_document_load_and_change.cc: Change a field name and 
	make sure that it has updated throughout the document.
	However, we still need to check lookups and related fields.

2011-11-28  Murray Cumming  <murrayc@murray.com>

	Field::set_field_info(): Avoid unnecessary checks (and warnings).

	* glom/libglom/data_structure/field.cc: If the type is not yet set,
	don't bother checking that everything else uses that type.
	This avoids a stderr warning about invalid types being used.

2011-11-28  Murray Cumming  <murrayc@murrayc.comb>

	Field::set_field_info(): Slight code improvement.

	* glom/libglom/data_structure/field.cc: Move some duplicated code into
	a static helper function.

2011-11-28  Murray Cumming  <murrayc@murrayc.com>

	Added an extra test for the Document class.

	* tests/test_document_change.cc: The beginnings of another test,
	to check that what we set is what we later get.

2011-11-28  Murray Cumming  <murrayc@murrayc.com>

	SQLite: Avoid a warning about int types for summary fields.

	* glom/libglom/data_structure/glomconversions.cc:
	get_text_for_gda_value(): An int is normal for aggregate fields for
	SQLite.
	convert_value(): Make sure that we do a locale-independent conversion,
	otherwise the above fix will cause us to, for instance, have a 
	comma in large numbers.

2011-11-25  Murray Cumming  <murrayc@murrayc.com>

	gcov: Add a legend key to the lcov html.

	* Makefile.am: Pass --legend to genhtml. 

2011-11-25  Murray Cumming  <murrayc@murrayc.com>

	Correct a query from UPDATE to SELECT.

	* glom/libglom/report_builder.cc: Correc the query to get system preferences 
	values. This was apparently not tested yet.

2011-11-25  Murray Cumming  <murrayc@murrayc.com>

	Avoid an uninteresting stdcerr warning.

	* glom/libglom/connectionpool.cc: It is OK to not know 
	the document sometimes.
