@@ -110,6 +110,35 @@ bool LayoutGroup::has_field(const Glib::ustring& field_name) const
   return false;
 }
 
+bool LayoutGroup::has_field(const Glib::ustring& parent_table_name, const Glib::ustring& table_name, const Glib::ustring& field_name) const
+{
+  for(type_list_items::const_iterator iter = m_list_items.begin(); iter != m_list_items.end(); ++iter)
+  {
+    sharedptr<LayoutItem> item = *iter;
+    sharedptr<LayoutItem_Field> field_item = sharedptr<LayoutItem_Field>::cast_dynamic(item);
+    if(field_item)
+    {
+      if( (field_item->get_name() == field_name) &&
+        (field_item->get_table_used(parent_table_name) == table_name))
+      {
+        return true;
+      }
+    }
+    else
+    {
+      //Recurse into the child groups:
+      sharedptr<LayoutGroup> group_item = sharedptr<LayoutGroup>::cast_dynamic(item);
+      if(group_item)
+      {
+        if(group_item->has_field(parent_table_name, table_name, field_name))
+          return true;
+      }
+    }
+  }
+
+  return false;
+}
+
 bool LayoutGroup::has_any_fields() const
 {
   for(type_list_items::const_iterator iter = m_list_items.begin(); iter != m_list_items.end(); ++iter)
